--- a/src/assets/scss/reset.scss
+++ b/src/assets/scss/reset.scss
@@ -65,7 +65,6 @@ input{
 
 .gap {
   margin: rem(20) auto;
-  background: #E8E5DD;
 }
 
 .icon {
@@ -81,4 +80,20 @@ input{
 
 .vertical .el-scrollbar__wrap {
   overflow-x: hidden;
+}
+::-webkit-scrollbar-track-piece { //滚动条凹槽的颜色，还可以设置边框属性
+background-color:#f8f8f8;
+}
+::-webkit-scrollbar {//滚动条的宽度
+width:9px;
+height:9px;
+}
+::-webkit-scrollbar-thumb {//滚动条的设置
+background-color:#dddddd;
+background-clip:padding-box;
+min-height:28px;
+border-radius: 5px;
+}
+::-webkit-scrollbar-thumb:hover {
+background-color:#bbb;
 }
