--- a/src/assets/scss/reset.scss
+++ b/src/assets/scss/reset.scss
@@ -16,6 +16,7 @@ form, fieldset, legend, button, input, textarea, /* form elements 表单元素 *
 th, td /* table elements 表格元素 */ {
   margin: 0;
   padding: 0;
+  tap-highlight-color: rgba(0, 0, 0, 0);
   @extend %box;
 }
 
